crates/flowscope-core/tests/snapshots/snapshots__run_bigquery_snapshot_test@bigquery_hyphenated_refs.snap
---
source: crates/flowscope-core/tests/snapshots.rs
expression: clean_result
---
{
  "statements": [
    {
      "statementIndex": 0,
      "statementType": "SELECT",
      "joinCount": 0,
      "complexityScore": 5
    }
  ],
  "nodes": [
    {
      "id": "column_5908707ce188a323",
      "type": "column",
      "label": "id",
      "qualifiedName": "project-a.dataset-b.users.id",
      "canonicalName": {
        "name": "project-a.dataset-b.users.id"
      },
      "statementIds": [
        0
      ]
    },
    {
      "id": "column_a63de932952af273",
      "type": "column",
      "label": "name",
      "qualifiedName": "project-a.dataset-b.users.name",
      "canonicalName": {
        "name": "project-a.dataset-b.users.name"
      },
      "statementIds": [
        0
      ]
    },
    {
      "id": "column_b6281afcdfda23f6",
      "type": "column",
      "label": "name",
      "canonicalName": {
        "name": "name"
      },
      "statementIds": [
        0
      ]
    },
    {
      "id": "column_e38d78c338bac387",
      "type": "column",
      "label": "id",
      "canonicalName": {
        "name": "id"
      },
      "statementIds": [
        0
      ]
    },
    {
      "id": "output_74d22f755ec62dbc",
      "type": "output",
      "label": "Output",
      "canonicalName": {
        "name": "Output"
      },
      "statementIds": [
        0
      ]
    },
    {
      "id": "table_2887bb8b48a3cf0e",
      "type": "table",
      "label": "users",
      "qualifiedName": "project-a.dataset-b.users",
      "canonicalName": {
        "catalog": "project-a",
        "schema": "dataset-b",
        "name": "users"
      },
      "statementIds": [
        0
      ]
    }
  ],
  "edges": [
    {
      "id": "edge_03f3c8d02729d078",
      "from": "table_2887bb8b48a3cf0e",
      "to": "column_a63de932952af273",
      "type": "ownership",
      "statementIds": [
        0
      ]
    },
    {
      "id": "edge_1b9821fee8e2fed3",
      "from": "output_74d22f755ec62dbc",
      "to": "column_b6281afcdfda23f6",
      "type": "ownership",
      "statementIds": [
        0
      ]
    },
    {
      "id": "edge_22107cbc827ed960",
      "from": "column_a63de932952af273",
      "to": "column_b6281afcdfda23f6",
      "type": "data_flow",
      "statementIds": [
        0
      ]
    },
    {
      "id": "edge_2a0be04f1568814e",
      "from": "table_2887bb8b48a3cf0e",
      "to": "column_5908707ce188a323",
      "type": "ownership",
      "statementIds": [
        0
      ]
    },
    {
      "id": "edge_4994bdacac6f8558",
      "from": "column_5908707ce188a323",
      "to": "column_e38d78c338bac387",
      "type": "data_flow",
      "statementIds": [
        0
      ]
    },
    {
      "id": "edge_9b5441461589fa16",
      "from": "output_74d22f755ec62dbc",
      "to": "column_e38d78c338bac387",
      "type": "ownership",
      "statementIds": [
        0
      ]
    }
  ],
  "issues": [],
  "summary": {
    "statementCount": 1,
    "tableCount": 1,
    "columnCount": 4,
    "joinCount": 0,
    "complexityScore": 5,
    "issueCount": {
      "errors": 0,
      "warnings": 0,
      "infos": 0
    },
    "hasErrors": false
  }
}
