crates/flowscope-core/tests/snapshots/snapshots__run_bigquery_snapshot_test@bigquery_select_except.snap
---
source: crates/flowscope-core/tests/snapshots.rs
expression: clean_result
---
{
  "statements": [
    {
      "statementIndex": 0,
      "statementType": "SELECT",
      "joinCount": 0,
      "complexityScore": 5
    }
  ],
  "nodes": [
    {
      "id": "output_74d22f755ec62dbc",
      "type": "output",
      "label": "Output",
      "canonicalName": {
        "name": "Output"
      },
      "statementIds": [
        0
      ]
    },
    {
      "id": "table_10a0682dff76cdbc",
      "type": "table",
      "label": "users",
      "qualifiedName": "users",
      "canonicalName": {
        "name": "users"
      },
      "statementIds": [
        0
      ]
    }
  ],
  "edges": [
    {
      "id": "edge_a86c6a385b241462",
      "from": "table_10a0682dff76cdbc",
      "to": "output_74d22f755ec62dbc",
      "type": "data_flow",
      "approximate": true,
      "statementIds": [
        0
      ]
    }
  ],
  "issues": [
    {
      "severity": "info",
      "code": "APPROXIMATE_LINEAGE",
      "message": "SELECT * from 'users' - column list unknown without schema metadata",
      "statementIndex": 0
    }
  ],
  "summary": {
    "statementCount": 1,
    "tableCount": 1,
    "columnCount": 0,
    "joinCount": 0,
    "complexityScore": 5,
    "issueCount": {
      "errors": 0,
      "warnings": 0,
      "infos": 1
    },
    "hasErrors": false
  }
}
