crates/flowscope-core/tests/snapshots/snapshots__run_bigquery_snapshot_test@bigquery_unnest_with_offset.snap
---
source: crates/flowscope-core/tests/snapshots.rs
expression: clean_result
---
{
  "statements": [
    {
      "statementIndex": 0,
      "statementType": "SELECT",
      "joinCount": 0,
      "complexityScore": 1
    }
  ],
  "nodes": [
    {
      "id": "column_0d96039f2f40086c",
      "type": "column",
      "label": "offset_pos",
      "canonicalName": {
        "name": "offset_pos"
      },
      "statementIds": [
        0
      ]
    },
    {
      "id": "column_52f4bef7f56fc1cd",
      "type": "column",
      "label": "item",
      "canonicalName": {
        "name": "item"
      },
      "statementIds": [
        0
      ]
    },
    {
      "id": "output_74d22f755ec62dbc",
      "type": "output",
      "label": "Output",
      "canonicalName": {
        "name": "Output"
      },
      "statementIds": [
        0
      ]
    }
  ],
  "edges": [
    {
      "id": "edge_7d85c662bf4d3188",
      "from": "output_74d22f755ec62dbc",
      "to": "column_52f4bef7f56fc1cd",
      "type": "ownership",
      "statementIds": [
        0
      ]
    },
    {
      "id": "edge_b192090afbcb409a",
      "from": "output_74d22f755ec62dbc",
      "to": "column_0d96039f2f40086c",
      "type": "ownership",
      "statementIds": [
        0
      ]
    }
  ],
  "issues": [
    {
      "severity": "warning",
      "code": "UNRESOLVED_REFERENCE",
      "message": "Column 'item' referenced but no tables are currently in scope",
      "statementIndex": 0
    },
    {
      "severity": "warning",
      "code": "UNRESOLVED_REFERENCE",
      "message": "Column 'offset_pos' referenced but no tables are currently in scope",
      "statementIndex": 0
    }
  ],
  "summary": {
    "statementCount": 1,
    "tableCount": 0,
    "columnCount": 2,
    "joinCount": 0,
    "complexityScore": 1,
    "issueCount": {
      "errors": 0,
      "warnings": 2,
      "infos": 0
    },
    "hasErrors": false
  }
}
