crates/flowscope-core/tests/snapshots/snapshots__run_snapshot_test@bracket_in_comment.snap
---
source: crates/flowscope-core/tests/snapshots.rs
expression: clean_result
---
{
  "statements": [
    {
      "statementIndex": 0,
      "statementType": "SELECT",
      "joinCount": 0,
      "complexityScore": 5
    }
  ],
  "nodes": [
    {
      "id": "column_2e3bf849170d9e5a",
      "type": "column",
      "label": "a",
      "qualifiedName": "b.a",
      "canonicalName": {
        "schema": "b",
        "name": "a"
      },
      "statementIds": [
        0
      ]
    },
    {
      "id": "column_f99a3f50810f5633",
      "type": "column",
      "label": "a",
      "canonicalName": {
        "name": "a"
      },
      "statementIds": [
        0
      ]
    },
    {
      "id": "output_74d22f755ec62dbc",
      "type": "output",
      "label": "Output",
      "canonicalName": {
        "name": "Output"
      },
      "statementIds": [
        0
      ]
    },
    {
      "id": "table_36d2446b5916819d",
      "type": "table",
      "label": "b",
      "qualifiedName": "b",
      "canonicalName": {
        "name": "b"
      },
      "statementIds": [
        0
      ]
    }
  ],
  "edges": [
    {
      "id": "edge_36ac4b4d55fb9701",
      "from": "output_74d22f755ec62dbc",
      "to": "column_f99a3f50810f5633",
      "type": "ownership",
      "statementIds": [
        0
      ]
    },
    {
      "id": "edge_e6380314c992d57f",
      "from": "table_36d2446b5916819d",
      "to": "column_2e3bf849170d9e5a",
      "type": "ownership",
      "statementIds": [
        0
      ]
    },
    {
      "id": "edge_fce5766f4a02f374",
      "from": "column_2e3bf849170d9e5a",
      "to": "column_f99a3f50810f5633",
      "type": "data_flow",
      "statementIds": [
        0
      ]
    }
  ],
  "issues": [],
  "summary": {
    "statementCount": 1,
    "tableCount": 1,
    "columnCount": 2,
    "joinCount": 0,
    "complexityScore": 5,
    "issueCount": {
      "errors": 0,
      "warnings": 0,
      "infos": 0
    },
    "hasErrors": false
  }
}
