crates/flowscope-core/tests/snapshots/snapshots__run_snapshot_test@dml_merge_statement.snap
---
source: crates/flowscope-core/tests/snapshots.rs
assertion_line: 27
expression: clean_result
---
{
  "statements": [
    {
      "statementIndex": 0,
      "statementType": "MERGE",
      "nodes": [
        {
          "id": "column_9dc7d0c267c91e02",
          "type": "column",
          "label": "product_id"
        },
        {
          "id": "column_f244fdf6189141ab",
          "type": "column",
          "label": "quantity"
        },
        {
          "id": "table_6888b8ab68491bd0",
          "type": "table",
          "label": "daily_shipments",
          "qualifiedName": "daily_shipments",
          "nameSpans": [
            {
              "start": 46,
              "end": 61
            }
          ]
        },
        {
          "id": "table_bc8c5d67293581e9",
          "type": "table",
          "label": "inventory",
          "qualifiedName": "inventory",
          "nameSpans": [
            {
              "start": 20,
              "end": 29
            }
          ]
        }
      ],
      "edges": [
        {
          "id": "edge_311d04bd31a6ad3e",
          "from": "table_bc8c5d67293581e9",
          "to": "column_f244fdf6189141ab",
          "type": "ownership"
        },
        {
          "id": "edge_9bcbe5f5ec13b708",
          "from": "table_bc8c5d67293581e9",
          "to": "column_9dc7d0c267c91e02",
          "type": "ownership"
        },
        {
          "id": "edge_ff51b4993f7e0196",
          "from": "table_6888b8ab68491bd0",
          "to": "table_bc8c5d67293581e9",
          "type": "data_flow"
        }
      ],
      "joinCount": 0,
      "complexityScore": 10
    }
  ],
  "globalLineage": {
    "nodes": [
      {
        "id": "column_9dc7d0c267c91e02",
        "type": "column",
        "label": "product_id",
        "canonicalName": {
          "name": "product_id"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "column_9dc7d0c267c91e02"
          }
        ]
      },
      {
        "id": "column_f244fdf6189141ab",
        "type": "column",
        "label": "quantity",
        "canonicalName": {
          "name": "quantity"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "column_f244fdf6189141ab"
          }
        ]
      },
      {
        "id": "table_6888b8ab68491bd0",
        "type": "table",
        "label": "daily_shipments",
        "canonicalName": {
          "name": "daily_shipments"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "table_6888b8ab68491bd0"
          }
        ]
      },
      {
        "id": "table_bc8c5d67293581e9",
        "type": "table",
        "label": "inventory",
        "canonicalName": {
          "name": "inventory"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "table_bc8c5d67293581e9"
          }
        ]
      }
    ],
    "edges": [
      {
        "id": "edge_311d04bd31a6ad3e",
        "from": "table_bc8c5d67293581e9",
        "to": "column_f244fdf6189141ab",
        "type": "ownership",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_9bcbe5f5ec13b708",
        "from": "table_bc8c5d67293581e9",
        "to": "column_9dc7d0c267c91e02",
        "type": "ownership",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_ff51b4993f7e0196",
        "from": "table_6888b8ab68491bd0",
        "to": "table_bc8c5d67293581e9",
        "type": "data_flow",
        "producerStatement": {
          "statementIndex": 0
        }
      }
    ]
  },
  "issues": [],
  "summary": {
    "statementCount": 1,
    "tableCount": 2,
    "columnCount": 2,
    "joinCount": 0,
    "complexityScore": 10,
    "issueCount": {
      "errors": 0,
      "warnings": 0,
      "infos": 0
    },
    "hasErrors": false
  },
  "resolvedSchema": {
    "tables": [
      {
        "name": "daily_shipments",
        "columns": [
          {
            "name": "product_id",
            "origin": "implied"
          },
          {
            "name": "quantity",
            "origin": "implied"
          }
        ],
        "origin": "implied",
        "sourceStatementIndex": 0,
        "updatedAt": "2024-01-01T00:00:00Z"
      },
      {
        "name": "inventory",
        "columns": [
          {
            "name": "product_id",
            "origin": "implied"
          },
          {
            "name": "quantity",
            "origin": "implied"
          }
        ],
        "origin": "implied",
        "sourceStatementIndex": 0,
        "updatedAt": "2024-01-01T00:00:00Z"
      }
    ]
  }
}
