crates/flowscope-core/tests/snapshots/snapshots__run_snapshot_test@dml_update_with_from.snap
---
source: crates/flowscope-core/tests/snapshots.rs
assertion_line: 27
expression: clean_result
---
{
  "statements": [
    {
      "statementIndex": 0,
      "statementType": "UPDATE",
      "nodes": [
        {
          "id": "column_11fa415539b7dba5",
          "type": "column",
          "label": "updated_at"
        },
        {
          "id": "column_74c341704cf4e26f",
          "type": "column",
          "label": "status"
        },
        {
          "id": "table_e500054d128e991c",
          "type": "table",
          "label": "customers",
          "qualifiedName": "customers",
          "nameSpans": [
            {
              "start": 92,
              "end": 101
            }
          ]
        },
        {
          "id": "table_eaa6ebb8f158751f",
          "type": "table",
          "label": "orders",
          "qualifiedName": "orders",
          "nameSpans": [
            {
              "start": 16,
              "end": 22
            }
          ]
        }
      ],
      "edges": [
        {
          "id": "edge_7f782d3c9f01e6e0",
          "from": "table_e500054d128e991c",
          "to": "table_eaa6ebb8f158751f",
          "type": "data_flow"
        },
        {
          "id": "edge_b508dc70429346a4",
          "from": "table_eaa6ebb8f158751f",
          "to": "column_74c341704cf4e26f",
          "type": "ownership"
        },
        {
          "id": "edge_f14f4de07f83be24",
          "from": "table_eaa6ebb8f158751f",
          "to": "column_11fa415539b7dba5",
          "type": "ownership"
        }
      ],
      "joinCount": 0,
      "complexityScore": 10
    }
  ],
  "globalLineage": {
    "nodes": [
      {
        "id": "column_11fa415539b7dba5",
        "type": "column",
        "label": "updated_at",
        "canonicalName": {
          "name": "updated_at"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "column_11fa415539b7dba5"
          }
        ]
      },
      {
        "id": "column_74c341704cf4e26f",
        "type": "column",
        "label": "status",
        "canonicalName": {
          "name": "status"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "column_74c341704cf4e26f"
          }
        ]
      },
      {
        "id": "table_e500054d128e991c",
        "type": "table",
        "label": "customers",
        "canonicalName": {
          "name": "customers"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "table_e500054d128e991c"
          }
        ]
      },
      {
        "id": "table_eaa6ebb8f158751f",
        "type": "table",
        "label": "orders",
        "canonicalName": {
          "name": "orders"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "table_eaa6ebb8f158751f"
          }
        ]
      }
    ],
    "edges": [
      {
        "id": "edge_7f782d3c9f01e6e0",
        "from": "table_e500054d128e991c",
        "to": "table_eaa6ebb8f158751f",
        "type": "data_flow",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_b508dc70429346a4",
        "from": "table_eaa6ebb8f158751f",
        "to": "column_74c341704cf4e26f",
        "type": "ownership",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_f14f4de07f83be24",
        "from": "table_eaa6ebb8f158751f",
        "to": "column_11fa415539b7dba5",
        "type": "ownership",
        "producerStatement": {
          "statementIndex": 0
        }
      }
    ]
  },
  "issues": [],
  "summary": {
    "statementCount": 1,
    "tableCount": 2,
    "columnCount": 2,
    "joinCount": 0,
    "complexityScore": 10,
    "issueCount": {
      "errors": 0,
      "warnings": 0,
      "infos": 0
    },
    "hasErrors": false
  },
  "resolvedSchema": {
    "tables": [
      {
        "name": "customers",
        "columns": [
          {
            "name": "id",
            "origin": "implied"
          },
          {
            "name": "region",
            "origin": "implied"
          }
        ],
        "origin": "implied",
        "sourceStatementIndex": 0,
        "updatedAt": "2024-01-01T00:00:00Z"
      },
      {
        "name": "orders",
        "columns": [
          {
            "name": "customer_id",
            "origin": "implied"
          }
        ],
        "origin": "implied",
        "sourceStatementIndex": 0,
        "updatedAt": "2024-01-01T00:00:00Z"
      }
    ]
  }
}
